Refactoring and adding SchedulerConfig and scheduling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Use event.listener.enable for local testing without docker
 csv.file.storage.files=crypto-values/BTC_values.csv,crypto-values/DOGE_values.csv,crypto-values/ETH_values.csv,crypto-values/LTC_values.csv,crypto-values/XRP_values.csv
-event.listener.enabled=true
+scheduler.enabled=true
+folder_path="crypto-values/"
+folder_path_for_listing="src/main/resources/crypto-values/"
 #MySql configuration
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
