--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 #Custom properties
 #Use these configurations for pre initialize DB
 csv.file.storage.files=BTC_values.csv,DOGE_values.csv,ETH_values.csv,LTC_values.csv,XRP_values.csv
-event.listener.enabled=true
+scheduler.enabled=true
 
 #Spring properties
 server.servlet.context-path=/api
