--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Use event.listener.enable for local testing without docker
 csv.file.storage.files=crypto-values/BTC_values.csv,crypto-values/DOGE_values.csv,crypto-values/ETH_values.csv,crypto-values/LTC_values.csv,crypto-values/XRP_values.csv
 scheduler.enabled=true
-folder_path="crypto-values/"
-folder_path_for_listing="src/main/resources/crypto-values/"
+folder_path=crypto-values/
 #MySql configuration
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
